# The-Binary-Decomposition-Interface

./: README.md
BDI C++/:  Updates  Process  Updates.md
BDI C++/BDIOS/:  GenesisGraph.hpp   filesystem.ch  allocator.ch  network.ch
BDI C++/Devtools/:  DebuggerInterface.hpp
BDI_cpp/: .clang-tidy  .gitignore  CMakeLists.txt  INVARIANTS.md  NOTES.json  README-BUILD.md  RESYNC_NOTES.json
BDI_cpp/.github/workflows/: ci
BDI_cpp/BDIos/: GenesisGraph.cpp  gui.ch  q_learning.ch
BDI_cpp/compiler/ir/: IR.cpp
BDI_cpp/compiler/translations/: IRToBDI.hpp
BDI_cpp/compiler/typecheck/: TypeChecker2.hpp
BDI_cpp/core/graph/: BDINode.hpp  GraphVisitor.hpp  GraphVisualizer.hpp
BDI_cpp/core/payload/: TypedPayload.hpp
BDI_cpp/core/types/: BDIValueVariant.hpp
BDI_cpp/example/hello_graph/: main
BDI_cpp/frontend/api/: GraphBuilder.cp  GraphBuilder.hpp
BDI_cpp/frontend/dsl/: DSLMapperBase.hpp
BDI_cpp/hal/: AArch64_HAL.hpp  RISCV_HAL.hpp  X86_64_HAL.hpp
BDI_cpp/include/bdi/: graph.hpp  payload.hpp  runtime.hpp  types.hpp
BDI_cpp/meta/: ProofVerifier.hpp  SemanticAnnotationParser.hpp
BDI_cpp/optimizer/passes/: CommonSubexpressionElimination.hpp  ConstantFolding.cpp  ConstantFolding.hpp  DeadCodeElimination.hpp
BDI_cpp/runtime/learning/: FeedbackAdapter.cpp  FeedbackAdapter.hpp  MetaLearningEngine.cpp  MetaLearningEngine.hpp  RecurrenceManager.hpp
BDI_cpp/runtime/memory/: MemoryAllocator.hpp  MemoryRegion.hpp
BDI_cpp/runtime/vm/: BDIVirtualMachine.hpp  ExecutionContext.cpp  ExecutionContext.hpp
BDI_cpp/test/: test_bdi_graph.cpp  test_bdi_vm_integration.cpp  test_bdios.cpp  test_compiler_pipeline.cpp  test_execution_context.cpp  test_frontend_compiler.cpp  test_memory_manager.cpp  test_metadata_integration.cpp  test_metadata_store.cpp
Code Files/: BDIVirtualMachine.cpp  BinaryEncoding.cpp  ConstantFolding.cpp  ExecutionContext.cpp  MemoryManager.cpp  MetaLearningEngine.cpp
Header Files/: BDIValueVariant.hpp  BDIVirtualMachine.hpp  BinaryEncoding.hpp  DSLMapperBase.hpp  DeadCodeElimination.hpp  ExecutionContext.hpp  FeedbackAdapter.hpp  GraphVisitor.hpp  MemoryManager.hpp  MemoryRegion.hpp  MetaLearningEngine.hpp  OptimizationPassBase.hpp  ProofVerifier.hpp  RecurrenceManager.hpp  TypeSystem.hpp  TypedPayload.hpp  Updates  VMTypeOperations.hpp
Test Files/: test_bdi_graph.cpp  test_bdi_vm_integration.cpp  test_execution_context.cpp  test_memory_manager.cpp  test_metadata_store.cpp  test_optimizer.cpp
(+107 files in other folders)
